--- a/app/src/main/res/menu/bottom_navigate_item.xml
+++ b/app/src/main/res/menu/bottom_navigate_item.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:id="@+id/add"
+        android:id="@+id/action_add"
         android:icon="@android:drawable/ic_menu_add"
-        android:title="add" />
+        android:title="@string/bottom_nav_add" />
     <item
-        android:id="@+id/delete"
+        android:id="@+id/action_delete"
         android:icon="@android:drawable/ic_menu_delete"
-        android:title="delete" />
+        android:title="@string/bottom_nav_delete" />
     <item
-        android:id="@+id/call"
+        android:id="@+id/action_call"
         android:icon="@android:drawable/ic_menu_call"
-        android:title="call" />
+        android:title="@string/bottom_nav_call" />
 </menu>
