--- a/app/src/main/res/layout/activity_updata_and_delete_person.xml
+++ b/app/src/main/res/layout/activity_updata_and_delete_person.xml
@@ -63,7 +63,7 @@
             android:text="@string/button_delete" />
 
         <Button
-            android:id="@+id/button_update"
+            android:id="@+id/button_add"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
